Fixed some deprecation warnings and converted javax.mail to jakarta.mail